update spark kafka scala notebook

--- a/notebooks/spark/KafkaSparkPython_ConsumeDemoProducer.ipynb
+++ b/notebooks/spark/KafkaSparkPython_ConsumeDemoProducer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Consuming Messages from Kafka \n",
+    "# Consuming Messages from Kafka  Tour Producer Using PySpark\n",
     "\n",
     "To run this notebook you should have taken the Kafka tour and created the Producer and Consumer jobs. I.e your Job UI should look like this: \n",
     "\n",
@@ -201,13 +201,6 @@
     "![kafka15.png](./images/kafka15.png)\n",
     "![kafka16.png](./images/kafka16.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
