HOPSWORKS-710 Renaming evolutionary_search to differential evolution and allreduce to collective_all_reduce

--- a/tensorflow/notebooks/Distributed_Training/collective_allreduce_strategy/keras.ipynb
+++ b/tensorflow/notebooks/Distributed_Training/collective_allreduce_strategy/keras.ipynb
@@ -65,7 +65,7 @@
     "        eval_spec=tf.estimator.EvalSpec(input_fn=input_fn))\n",
     "    \n",
     "from hops import experiment\n",
-    "experiment.allreduce(distributed_training)"
+    "experiment.collective_all_reduce(distributed_training)"
    ]
   },
   {
