--- a/tensorflow/notebooks/Distributed_Training/collective_allreduce_strategy/mnist.ipynb
+++ b/tensorflow/notebooks/Distributed_Training/collective_allreduce_strategy/mnist.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def allreduce_mnist():\n",
+    "def collective_all_reduce_mnist():\n",
     "\n",
     "    import tensorflow as tf\n",
     "    from hops import devices\n",
@@ -248,8 +248,8 @@
     "from hops import experiment\n",
     "from hops import hdfs\n",
     "\n",
-    "notebook = hdfs.project_path() + \"Jupyter/Distributed_Training/collective_allreduce_strategy/mnist.ipynb\"\n",
-    "experiment.allreduce(allreduce_mnist,\n",
+    "notebook = hdfs.project_path() + \"Jupyter/Distributed_Training/collective_all_reduce_strategy/mnist.ipynb\"\n",
+    "experiment.collective_all_reduce(collective_all_reduce_mnist,\n",
     "                  name='mnist estimator', \n",
     "                  description='A minimal mnist example with two hidden layers',\n",
     "                  versioned_resources=[notebook], local_logdir=True)"
