--- a/tensorflow/notebooks/Distributed_Training/parameter_server_strategy/mnist.ipynb
+++ b/tensorflow/notebooks/Distributed_Training/parameter_server_strategy/mnist.ipynb
@@ -69,7 +69,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
@@ -280,7 +280,7 @@
     "experiment.parameter_server(parameter_server_mnist,\n",
     "                  name='mnist estimator', \n",
     "                  description='A minimal mnist example with two hidden layers',\n",
-    "                  versioned_resources=[notebook])"
+    "                  versioned_resources=[notebook], local_logdir=True)"
    ]
   },
   {
