--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/evolutionary_search/Mnist_gan.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/evolutionary_search/Mnist_gan.ipynb
@@ -323,7 +323,7 @@
    "source": [
     "from hops import experiment\n",
     "search_dict = {'lr': [0.01, 0.0001], 'noise': [50, 200]}\n",
-    "experiment.evolutionary_search(mnist_eager_gan, search_dict, name='eager mnist gan')"
+    "experiment.differential_evolution(mnist_eager_gan, search_dict, name='eager mnist gan')"
    ]
   }
  ],
