--- a/tensorflow/notebooks/Parallel_Experiments/PyTorch/evolutionary_search/mnist_differential_evolution.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/PyTorch/evolutionary_search/mnist_differential_evolution.ipynb
@@ -156,7 +156,7 @@
    "source": [
     "from hops import experiment\n",
     "# Run differential evolution with default parameters\n",
-    "experiment.evolutionary_search(spark, pytorch_mnist, args, name='pytorch mnist diff evo')"
+    "experiment.differential_evolution(pytorch_mnist, args, name='pytorch mnist diff evo')"
    ]
   }
  ],
