--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/evolutionary_search/Hyperparameter_search_cifar10.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/evolutionary_search/Hyperparameter_search_cifar10.ipynb
@@ -288,7 +288,7 @@
    "source": [
     "from hops import experiment\n",
     "\n",
-    "tensorboard_hdfs_logdir = experiment.evolutionary_search(wrapper, boundary_dict, direction='max', population=10, generations=3, crossover=0.7, mutation=0.5, name='cifar10 differential evolution')"
+    "tensorboard_hdfs_logdir = experiment.differential_evolution(wrapper, boundary_dict, direction='max', population=10, generations=3, crossover=0.7, mutation=0.5, name='cifar10 differential evolution')"
    ]
   },
   {
