HOPSWORKS-710 Renaming evolutionary_search to differential evolution and allreduce to collective_all_reduce (#18)

--- a/tensorflow/notebooks/Distributed_Training/parameter_server_strategy/mnist.ipynb
+++ b/tensorflow/notebooks/Distributed_Training/parameter_server_strategy/mnist.ipynb
@@ -7,7 +7,7 @@
     "# Minimal mnist example on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 1.11</h3></font>"
    ]
   },
   {
@@ -48,50 +48,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>20</td><td>application_1538560344548_0021</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0:8088/proxy/application_1538560344548_0021/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0:8042/node/containerlogs/container_e01_1538560344548_0021_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parameter_server_mnist():\n",
     "\n",
     "    import tensorflow as tf\n",
     "    from hops import devices\n",
     "    from hops import tensorboard\n",
-    "\n",
+    "    import os\n",
+    "    import json\n",
+    "    \n",
+    "    # Extract information about cluster\n",
+    "    tf_cluster = json.loads(os.environ[\"TF_CONFIG\"])\n",
+    "    \n",
+    "    # Workers + chief is the number of processes reading from HDFS\n",
+    "    num_workers = len(tf_cluster[\"cluster\"][\"worker\"]) + 1\n",
+    "    \n",
+    "    # Both chief and workers needs unique task_index for sharding\n",
+    "    task_index = 0\n",
+    "    if tf_cluster[\"task\"][\"type\"] == 'chief':\n",
+    "        task_index = num_workers - 1\n",
+    "    else:\n",
+    "        task_index = tf_cluster[\"task\"][\"index\"]\n",
+    "    \n",
     "    PREDICT = tf.estimator.ModeKeys.PREDICT\n",
     "    EVAL = tf.estimator.ModeKeys.EVAL\n",
     "    TRAIN = tf.estimator.ModeKeys.TRAIN\n",
     "    learning_rate=0.002\n",
     "    batch_size=128\n",
-    "    training_steps=50\n",
+    "    training_steps=5000\n",
+    "    \n",
+    "    train_filenames = [hdfs.project_path() + \"TestJob/data/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TestJob/data/mnist/validation/validation.tfrecords\"]\n",
     "\n",
     "    def build_estimator(config):\n",
     "        \"\"\"\n",
@@ -205,35 +195,60 @@
     "            global_step=tf.train.get_global_step())\n",
     "        return train_op\n",
     "\n",
+    "    def get_train_inputs(filenames, batch_size):\n",
     "\n",
-    "    def get_train_inputs(batch_size, mnist_data):\n",
-    "        \"\"\"Return the input function to get the training data.\n",
-    "        Args:\n",
-    "            batch_size (int): Batch size of training iterator that is returned\n",
-    "                              by the input function.\n",
-    "            mnist_data ((array, array): Mnist training data as (inputs, labels).\n",
-    "        Returns:\n",
-    "            DataSet: A tensorflow DataSet object to represent the training input\n",
-    "                     pipeline.\n",
-    "        \"\"\"\n",
-    "        dataset = tf.data.Dataset.from_tensor_slices(mnist_data)\n",
-    "        dataset = dataset.shuffle(\n",
-    "            buffer_size=1000, reshuffle_each_iteration=True\n",
-    "        ).repeat(count=None).batch(batch_size)\n",
+    "        def parser(serialized_example):\n",
+    "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
+    "            features = tf.parse_single_example(\n",
+    "                serialized_example,\n",
+    "                features={\n",
+    "                    'image_raw': tf.FixedLenFeature([], tf.string),\n",
+    "                    'label': tf.FixedLenFeature([], tf.int64),\n",
+    "                })\n",
+    "            image = tf.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([28 * 28])\n",
+    "\n",
+    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
+    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
+    "            label = tf.cast(features['label'], tf.int32)\n",
+    "            return image, label\n",
+    "\n",
+    "        \n",
+    "        # Import MNIST data\n",
+    "        dataset = tf.data.TFRecordDataset(filenames)\n",
+    "        \n",
+    "        # Shard Dataset on each worker so it gets unique samples\n",
+    "        dataset.shard(num_workers, task_index)\n",
+    "\n",
+    "        # Map the parser over dataset, and batch results by up to batch_size\n",
+    "        dataset = dataset.map(parser)\n",
+    "        dataset = dataset.batch(batch_size)\n",
     "        return dataset\n",
     "\n",
+    "    def get_eval_inputs(filenames, batch_size):\n",
     "\n",
-    "    def get_eval_inputs(batch_size, mnist_data):\n",
-    "        \"\"\"Return the input function to get the validation data.\n",
-    "        Args:\n",
-    "            batch_size (int): Batch size of validation iterator that is returned\n",
-    "                              by the input function.\n",
-    "            mnist_data ((array, array): Mnist test data as (inputs, labels).\n",
-    "        Returns:\n",
-    "            DataSet: A tensorflow DataSet object to represent the validation input\n",
-    "                     pipeline.\n",
-    "        \"\"\"\n",
-    "        dataset = tf.data.Dataset.from_tensor_slices(mnist_data)\n",
+    "        def parser(serialized_example):\n",
+    "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
+    "            features = tf.parse_single_example(\n",
+    "                serialized_example,\n",
+    "                features={\n",
+    "                    'image_raw': tf.FixedLenFeature([], tf.string),\n",
+    "                    'label': tf.FixedLenFeature([], tf.int64),\n",
+    "                })\n",
+    "            image = tf.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([28 * 28])\n",
+    "\n",
+    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
+    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
+    "            label = tf.cast(features['label'], tf.int32)\n",
+    "            return image, label\n",
+    "\n",
+    "        \n",
+    "        # Import MNIST data\n",
+    "        dataset = tf.data.TFRecordDataset(filenames)\n",
+    "\n",
+    "        # Map the parser over dataset, and batch results by up to batch_size\n",
+    "        dataset = dataset.map(parser)\n",
     "        dataset = dataset.batch(batch_size)\n",
     "        return dataset\n",
     "    \n",
@@ -255,10 +270,10 @@
     "    model_estimator = build_estimator(config)\n",
     "    # Setup and start training and validation\n",
     "    train_spec = tf.estimator.TrainSpec(\n",
-    "         input_fn=lambda: get_train_inputs(batch_size, mnist_train),\n",
+    "         input_fn=lambda: get_train_inputs(train_filenames, batch_size),\n",
     "         max_steps=training_steps)\n",
     "    eval_spec = tf.estimator.EvalSpec(\n",
-    "         input_fn=lambda: get_eval_inputs(batch_size, mnist_test),\n",
+    "         input_fn=lambda: get_eval_inputs(validation_filenames, batch_size),\n",
     "         steps=None,\n",
     "         start_delay_secs=10,  # Start evaluating after 10 sec.\n",
     "         throttle_secs=30  # Evaluate only every 30 sec\n",
@@ -280,7 +295,7 @@
     "experiment.parameter_server(parameter_server_mnist,\n",
     "                  name='mnist estimator', \n",
     "                  description='A minimal mnist example with two hidden layers',\n",
-    "                  versioned_resources=[notebook])"
+    "                  versioned_resources=[notebook], local_logdir=True)"
    ]
   },
   {
