--- a/tensorflow/notebooks/Parallel_Experiments/Keras/evolutionary_search/keras_mnist.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/Keras/evolutionary_search/keras_mnist.ipynb
@@ -106,7 +106,7 @@
     "search_dict = {'kernel': [2,8], 'pool': [2,8], 'dropout': [0.01,0.99]}\n",
     "# local_logdir starts the TensorBoard with a logdir on the local filesystem.\n",
     "# when the job is finished the contents of the logdir will be put automatically in your project\n",
-    "experiment.evolutionary_search(spark, keras, search_dict, name='keras mnist diff evo', local_logdir=True)"
+    "experiment.differential_evolution(keras, search_dict, name='keras mnist diff evo', local_logdir=True)"
    ]
   }
  ],
