--- a/tensorflow/notebooks/Distributed_Training/collective_allreduce_strategy/mnist.ipynb
+++ b/tensorflow/notebooks/Distributed_Training/collective_allreduce_strategy/mnist.ipynb
@@ -7,7 +7,7 @@
     "# Minimal mnist example on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 1.11</h3></font>"
    ]
   },
   {
@@ -52,11 +52,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def allreduce_mnist():\n",
+    "def collective_all_reduce_mnist():\n",
     "\n",
     "    import tensorflow as tf\n",
     "    from hops import devices\n",
     "    from hops import tensorboard\n",
+    "    import json\n",
+    "    import os\n",
+    "    \n",
+    "    # Extract information about cluster\n",
+    "    tf_cluster = json.loads(os.environ[\"TF_CONFIG\"])\n",
+    "    num_workers = len(tf_cluster[\"cluster\"][\"worker\"])\n",
+    "    task_index = tf_cluster[\"task\"][\"index\"]\n",
     "\n",
     "    PREDICT = tf.estimator.ModeKeys.PREDICT\n",
     "    EVAL = tf.estimator.ModeKeys.EVAL\n",
@@ -64,6 +71,9 @@
     "    learning_rate=0.002\n",
     "    batch_size=128\n",
     "    training_steps=5000\n",
+    "    \n",
+    "    train_filenames = [hdfs.project_path() + \"TestJob/data/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TestJob/data/mnist/validation/validation.tfrecords\"]\n",
     "\n",
     "    def build_estimator(config):\n",
     "        \"\"\"\n",
@@ -177,35 +187,60 @@
     "            global_step=tf.train.get_global_step())\n",
     "        return train_op\n",
     "\n",
+    "    def get_train_inputs(filenames, batch_size):\n",
     "\n",
-    "    def get_train_inputs(batch_size, mnist_data):\n",
-    "        \"\"\"Return the input function to get the training data.\n",
-    "        Args:\n",
-    "            batch_size (int): Batch size of training iterator that is returned\n",
-    "                              by the input function.\n",
-    "            mnist_data ((array, array): Mnist training data as (inputs, labels).\n",
-    "        Returns:\n",
-    "            DataSet: A tensorflow DataSet object to represent the training input\n",
-    "                     pipeline.\n",
-    "        \"\"\"\n",
-    "        dataset = tf.data.Dataset.from_tensor_slices(mnist_data)\n",
-    "        dataset = dataset.shuffle(\n",
-    "            buffer_size=1000, reshuffle_each_iteration=True\n",
-    "        ).repeat(count=None).batch(batch_size)\n",
+    "        def parser(serialized_example):\n",
+    "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
+    "            features = tf.parse_single_example(\n",
+    "                serialized_example,\n",
+    "                features={\n",
+    "                    'image_raw': tf.FixedLenFeature([], tf.string),\n",
+    "                    'label': tf.FixedLenFeature([], tf.int64),\n",
+    "                })\n",
+    "            image = tf.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([28 * 28])\n",
+    "\n",
+    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
+    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
+    "            label = tf.cast(features['label'], tf.int32)\n",
+    "            return image, label\n",
+    "\n",
+    "        \n",
+    "        # Import MNIST data\n",
+    "        dataset = tf.data.TFRecordDataset(filenames)\n",
+    "        \n",
+    "        # Shard Dataset on each worker so it gets unique samples\n",
+    "        dataset.shard(num_workers, task_index)\n",
+    "\n",
+    "        # Map the parser over dataset, and batch results by up to batch_size\n",
+    "        dataset = dataset.map(parser)\n",
+    "        dataset = dataset.batch(batch_size)\n",
     "        return dataset\n",
     "\n",
+    "    def get_eval_inputs(filenames, batch_size):\n",
     "\n",
-    "    def get_eval_inputs(batch_size, mnist_data):\n",
-    "        \"\"\"Return the input function to get the validation data.\n",
-    "        Args:\n",
-    "            batch_size (int): Batch size of validation iterator that is returned\n",
-    "                              by the input function.\n",
-    "            mnist_data ((array, array): Mnist test data as (inputs, labels).\n",
-    "        Returns:\n",
-    "            DataSet: A tensorflow DataSet object to represent the validation input\n",
-    "                     pipeline.\n",
-    "        \"\"\"\n",
-    "        dataset = tf.data.Dataset.from_tensor_slices(mnist_data)\n",
+    "        def parser(serialized_example):\n",
+    "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
+    "            features = tf.parse_single_example(\n",
+    "                serialized_example,\n",
+    "                features={\n",
+    "                    'image_raw': tf.FixedLenFeature([], tf.string),\n",
+    "                    'label': tf.FixedLenFeature([], tf.int64),\n",
+    "                })\n",
+    "            image = tf.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([28 * 28])\n",
+    "\n",
+    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
+    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
+    "            label = tf.cast(features['label'], tf.int32)\n",
+    "            return image, label\n",
+    "\n",
+    "        \n",
+    "        # Import MNIST data\n",
+    "        dataset = tf.data.TFRecordDataset(filenames)\n",
+    "\n",
+    "        # Map the parser over dataset, and batch results by up to batch_size\n",
+    "        dataset = dataset.map(parser)\n",
     "        dataset = dataset.batch(batch_size)\n",
     "        return dataset\n",
     "    \n",
@@ -227,10 +262,10 @@
     "    model_estimator = build_estimator(config)\n",
     "    # Setup and start training and validation\n",
     "    train_spec = tf.estimator.TrainSpec(\n",
-    "         input_fn=lambda: get_train_inputs(batch_size, mnist_train),\n",
+    "         input_fn=lambda: get_train_inputs(train_filenames, batch_size),\n",
     "         max_steps=training_steps)\n",
     "    eval_spec = tf.estimator.EvalSpec(\n",
-    "         input_fn=lambda: get_eval_inputs(batch_size, mnist_test),\n",
+    "         input_fn=lambda: get_eval_inputs(validation_filenames, batch_size),\n",
     "         steps=None,\n",
     "         start_delay_secs=10,  # Start evaluating after 10 sec.\n",
     "         throttle_secs=30  # Evaluate only every 30 sec\n",
@@ -249,7 +284,7 @@
     "from hops import hdfs\n",
     "\n",
     "notebook = hdfs.project_path() + \"Jupyter/Distributed_Training/collective_allreduce_strategy/mnist.ipynb\"\n",
-    "experiment.allreduce(allreduce_mnist,\n",
+    "experiment.collective_all_reduce(collective_all_reduce_mnist,\n",
     "                  name='mnist estimator', \n",
     "                  description='A minimal mnist example with two hidden layers',\n",
     "                  versioned_resources=[notebook], local_logdir=True)"
