Improving hive example
Update some deprecated params in viz notebook

Update README

Update gitignore

Bump hops to 2.8.2.6

Update readme

merge

--- a/notebooks/featurestore/FeaturestoreTourPython.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourPython.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "heading",
    "metadata": {},
+   "level": 3,
    "source": [
     " # Feature Store Tour - Python API\n",
     " \n",
@@ -59,8 +60,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "The hops library is automatically installed in all Hopsworks-projects. This library has a module called `featurestore` that provides an API for the feature store. You can find API documentation [here](http://hops-py.logicalclocks.com/)."
    ]
@@ -88,7 +91,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
