--- a/notebooks/featurestore/FeaturestoreTourScala.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourScala.ipynb
@@ -99,7 +99,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>24</td><td>application_1546436976951_0008</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1546436976951_0008/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e03_1546436976951_0008_01_000001/fs_demo__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>1</td><td>application_1546546924580_0003</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1546546924580_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1546546924580_0003_01_000001/fs_demo__meb10000\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -550,10 +550,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "java.lang.IllegalArgumentException: Found the feature with name: team_id in more than one of the featuregroups of the featurestore fs_demo_featurestore please specify featuregroup that you want to get the feature from. The matched featuregroups are: games_features_1, season_scores_features_1, attendances_features_1, players_features_1, teams_features_1\n",
-      "  at io.hops.util.featurestore.FeaturestoreHelper.findFeature(FeaturestoreHelper.java:403)\n",
-      "  at io.hops.util.featurestore.FeaturestoreHelper.findFeaturegroupsThatContainsFeatures(FeaturestoreHelper.java:266)\n",
-      "  at io.hops.util.Hops.getFeatures(Hops.java:1596)\n",
+      "java.lang.IllegalArgumentException: Found the feature with name: team_id in more than one of the featuregroups of the featurestore fs_demo_featurestore please specify featuregroup that you want to get the feature from. The matched featuregroups are: games_features_1, season_scores_features_1, attendances_features_1, players_features_1, teams_features_1, teams_features_spanish_1, teams_features_spanish_2, pandas_test_example_1, numpy_test_example_1, python_test_example_1\n",
+      "  at io.hops.util.featurestore.FeaturestoreHelper.findFeature(FeaturestoreHelper.java:407)\n",
+      "  at io.hops.util.featurestore.FeaturestoreHelper.findFeaturegroupsThatContainsFeatures(FeaturestoreHelper.java:267)\n",
+      "  at io.hops.util.Hops.getFeatures(Hops.java:1617)\n",
       "  ... 54 elided\n",
       "\n"
      ]
@@ -626,8 +626,8 @@
      "output_type": "stream",
      "text": [
       "java.lang.IllegalArgumentException: Could not find any common columns in featuregroups to join on, searched through the following featuregroups: teams_features, games_features\n",
-      "  at io.hops.util.featurestore.FeaturestoreHelper.getJoinColumn(FeaturestoreHelper.java:545)\n",
-      "  at io.hops.util.Hops.getFeatures(Hops.java:1597)\n",
+      "  at io.hops.util.featurestore.FeaturestoreHelper.getJoinColumn(FeaturestoreHelper.java:549)\n",
+      "  at io.hops.util.Hops.getFeatures(Hops.java:1618)\n",
       "  ... 54 elided\n",
       "\n"
      ]
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
      "output_type": "stream",
      "text": [
       "latestVersion: Int = 2\n",
-      "res21: Int = 2\n"
+      "res75: Int = 2\n"
      ]
     }
    ],
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
       "import spark.implicits._\n",
       "import org.apache.spark.sql.types._\n",
       "sampleData: Seq[org.apache.spark.sql.Row] = List([999,41251.52,1], [998,1319.4,8], [997,21219.1,2])\n",
-      "sampleSchema: List[org.apache.spark.sql.types.StructField] = List(StructField(equipo_id,IntegerType,true), StructField(equipo_presupuesto,FloatType,true), StructField(equipo_posición,IntegerType,true))\n",
+      "sampleSchema: List[org.apache.spark.sql.types.StructField] = List(StructField(equipo_id,IntegerType,true), StructField(equipo_presupuesto,FloatType,true), StructField(equipo_posicion,IntegerType,true))\n",
       "sampleDF: org.apache.spark.sql.DataFrame = [equipo_id: int, equipo_presupuesto: float ... 1 more field]\n"
      ]
     }
@@ -1027,7 +1027,7 @@
     "val sampleSchema = List(\n",
     "  StructField(\"equipo_id\", IntegerType, true),\n",
     "  StructField(\"equipo_presupuesto\", FloatType, true),\n",
-    "  StructField(\"equipo_posición\", IntegerType, true)\n",
+    "  StructField(\"equipo_posicion\", IntegerType, true)\n",
     ")\n",
     "val sampleDF = spark.createDataFrame(\n",
     "  spark.sparkContext.parallelize(sampleData),\n",
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
      "output_type": "stream",
      "text": [
       "+---------+------------------+---------------+\n",
-      "|equipo_id|equipo_presupuesto|equipo_posición|\n",
+      "|equipo_id|equipo_presupuesto|equipo_posicion|\n",
       "+---------+------------------+---------------+\n",
       "|      999|          41251.52|              1|\n",
       "|      998|            1319.4|              8|\n",
@@ -1061,14 +1061,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res23: Long = 3\n"
+      "res77: Long = 3\n"
      ]
     }
    ],
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
      "output_type": "stream",
      "text": [
       "+------------------+---------+---------------+\n",
-      "|equipo_presupuesto|equipo_id|equipo_posición|\n",
+      "|equipo_presupuesto|equipo_id|equipo_posicion|\n",
       "+------------------+---------+---------------+\n",
       "|         12957.076|        1|              1|\n",
       "|         2403.3704|        2|              2|\n",
@@ -1129,14 +1129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res25: Long = 50\n"
+      "res79: Long = 50\n"
      ]
     }
    ],
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1208,8 +1208,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets fetch the updated feature group from the feature store and verify that the update was successful"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1234,13 +1241,13 @@
      "output_type": "stream",
      "text": [
       "+------------------+---------+---------------+\n",
-      "|equipo_presupuesto|equipo_id|equipo_posición|\n",
+      "|equipo_presupuesto|equipo_id|equipo_posicion|\n",
       "+------------------+---------+---------------+\n",
+      "|          41251.52|      999|              1|\n",
       "|         12957.076|        1|              1|\n",
       "|         2403.3704|        2|              2|\n",
       "|         3390.3755|        3|              3|\n",
       "|         13547.429|        4|              4|\n",
-      "|          9678.333|        5|              5|\n",
       "+------------------+---------+---------------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -1253,14 +1260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res29: Long = 53\n"
+      "res83: Long = 53\n"
      ]
     }
    ],
@@ -1277,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1348,7 @@
      "output_type": "stream",
      "text": [
       "+---------+---------------+------------------+\n",
-      "|equipo_id|equipo_posición|equipo_presupuesto|\n",
+      "|equipo_id|equipo_posicion|equipo_presupuesto|\n",
       "+---------+---------------+------------------+\n",
       "|      999|              1|          41251.52|\n",
       "|      998|              8|            1319.4|\n",
@@ -1357,14 +1364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res33: Long = 3\n"
+      "res87: Long = 3\n"
      ]
     }
    ],
@@ -1788,8 +1795,8 @@
      "output_type": "stream",
      "text": [
       "io.hops.util.exceptions.TrainingDatasetCreationError: Could not create trainingDataset:team_position_prediction , error code: 260017 error message: The provided training dataset name already exists, user message: The path to create the dataset already exists: /Projects/fs_demo/fs_demo_Training_Datasets/team_position_prediction_1, delete the directory and try again.\n",
-      "  at io.hops.util.Hops.createTrainingDatasetRest(Hops.java:1139)\n",
-      "  at io.hops.util.Hops.createTrainingDataset(Hops.java:1926)\n",
+      "  at io.hops.util.Hops.createTrainingDatasetRest(Hops.java:1137)\n",
+      "  at io.hops.util.Hops.createTrainingDataset(Hops.java:1977)\n",
       "  ... 60 elided\n",
       "\n"
      ]
@@ -2153,7 +2160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res50: java.util.List[String] = [games_features_1, season_scores_features_1, attendances_features_1, players_features_1, teams_features_1, teams_features_spanish_1, teams_features_spanish_2]\n"
+      "res50: java.util.List[String] = [games_features_1, season_scores_features_1, attendances_features_1, players_features_1, teams_features_1, teams_features_spanish_1, teams_features_spanish_2, pandas_test_example_1, numpy_test_example_1, python_test_example_1]\n"
      ]
     }
    ],
@@ -2170,14 +2177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res1: java.util.List[String] = [away_team_id, home_team_id, score, average_position, sum_position, team_id, average_attendance, sum_attendance, team_id, average_player_age, average_player_rating, average_player_worth, sum_player_age, sum_player_rating, sum_player_worth, team_id, team_budget, team_id, team_position, equipo_id, equipo_posicion, equipo_presupuesto, equipo_id, equipo_posicion, equipo_presupuesto, average_attendance_test, average_player_age_test, team_budget_test, col_0, col_1, col_2, col_0, col_1, col_2]\n"
+      "res51: java.util.List[String] = [away_team_id, home_team_id, score, average_position, sum_position, team_id, average_attendance, sum_attendance, team_id, average_player_age, average_player_rating, average_player_worth, sum_player_age, sum_player_rating, sum_player_worth, team_id, team_budget, team_id, team_position, equipo_id, equipo_posicion, equipo_presupuesto, equipo_id, equipo_posicion, equipo_presupuesto, average_attendance_test, average_player_age_test, team_budget_test, col_0, col_1, col_2, col_0, col_1, col_2]\n"
      ]
     }
    ],
@@ -2194,14 +2201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res51: java.util.List[String] = [team_position_prediction_1, team_position_prediction_csv_1, team_position_prediction_2]\n"
+      "res52: java.util.List[String] = [team_position_prediction_csv_1, team_position_prediction_1, team_position_prediction_tsv_1, team_position_prediction_parquet_1, team_position_prediction_hdf5_1, team_position_prediction_npy_1, team_position_prediction_2, team_position_prediction_parquet_2]\n"
      ]
     }
    ],
@@ -2218,14 +2225,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res52: io.hops.util.featurestore.FeaturegroupsAndTrainingDatasetsDTO = FeaturegroupsAndTrainingDatasetsDTO{featuregroups=[FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/games_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/season_scores_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/attendances_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/players_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/teams_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/app..."
+      "res53: io.hops.util.featurestore.FeaturegroupsAndTrainingDatasetsDTO = FeaturegroupsAndTrainingDatasetsDTO{featuregroups=[FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/games_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/season_scores_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/attendances_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/players_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/apps/hive/warehouse/fs_demo_featurestore.db/teams_features_1]}, FeaturegroupDTO{, hdfsStorePaths=[hdfs://10.0.2.15:8020/app..."
      ]
     }
    ],
@@ -2253,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2279,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2307,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2360,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2452,14 +2459,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lr: org.apache.spark.ml.regression.LinearRegression = linReg_6e3be7921d48\n"
+      "lr: org.apache.spark.ml.regression.LinearRegression = linReg_8386df8afedf\n"
      ]
     }
    ],
@@ -2481,14 +2488,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lrModel: org.apache.spark.ml.regression.LinearRegressionModel = linReg_6e3be7921d48\n"
+      "lrModel: org.apache.spark.ml.regression.LinearRegressionModel = linReg_8386df8afedf\n"
      ]
     }
    ],
@@ -2505,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2548,14 +2555,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainingSummary: org.apache.spark.ml.regression.LinearRegressionTrainingSummary = org.apache.spark.ml.regression.LinearRegressionTrainingSummary@1e7160ef\n",
+      "trainingSummary: org.apache.spark.ml.regression.LinearRegressionTrainingSummary = org.apache.spark.ml.regression.LinearRegressionTrainingSummary@1cdfa82f\n",
       "numIterations: 56\n",
       "objectiveHistory: [0.5,0.4112410289397031,0.12518994433439817,0.08777706436856189,0.03913658284734977,0.03902366004873292,0.03902163129558643,0.03901820891749733,0.03899877146854554,0.038996622590289305,0.038986570501617614,0.0389851971409976,0.038985172369978296,0.03898515439811421,0.03898512325511451,0.03898510959220512,0.038985069161691754,0.038985041128822284,0.03898500402608199,0.038984965224531244,0.03898488771327016,0.03898469837573477,0.038983155982845144,0.03898302661967812,0.038981810415349566,0.038981644705064517,0.03898063375157004,0.03898005548848621,0.03897885683980405,0.03897755337185462,0.03897735366403644,0.03897705829013814,0.038977003369343836,0.038976960084926085,0.038976909759630335,0.03897688838839456,0.038976872666544066,0.03897681862521917,0.038976773319025576,0.038976764382013446,0.038976761236793354,0.038976759514787136,0.0389767582422512,0.038976757866287896,0.0389767576845524,0.03897675761791368,0.038976757596554376,0.03897675758512335,0.03897675758223342,0.03897675758024393,0.038976757579727725,0.038976757579506416,0.03897675757940564,0.03897675757933266,0.03897675757931047,0.038976757579303245]\n",
       "+--------------------+\n",
