[HOPSWORKS-752] Remove versioned resources from example

--- a/tensorflow/notebooks/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
+++ b/tensorflow/notebooks/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
@@ -110,11 +110,9 @@
     "from hops import experiment\n",
     "from hops import hdfs\n",
     "\n",
-    "notebook = hdfs.project_path() + \"Jupyter/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb\"\n",
     "experiment.launch(minimal_mnist,\n",
     "                  name='mnist estimator', \n",
-    "                  description='A minimal mnist example with two hidden layers',\n",
-    "                  versioned_resources=[notebook])"
+    "                  description='A minimal mnist example with two hidden layers',\n")"
    ]
   },
   {
