[HOPSWORKS-752] Remove versioned resources from example

--- a/tensorflow/notebooks/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
+++ b/tensorflow/notebooks/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
@@ -109,10 +109,9 @@
    "source": [
     "from hops import experiment\n",
     "from hops import hdfs\n",
-    "\n",
     "experiment.launch(minimal_mnist,\n",
     "                  name='mnist estimator', \n",
-    "                  description='A minimal mnist example with two hidden layers',\n")"
+    "                  description='A minimal mnist example with two hidden layers')"
    ]
   },
   {
