--- a/tensorflow/notebooks/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
+++ b/tensorflow/notebooks/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
@@ -82,11 +82,11 @@
     "    x={\"x\": input(mnist.train)[0]},\n",
     "    y=input(mnist.train)[1],\n",
     "    num_epochs=None,\n",
-    "    batch_size=128,\n",
+    "    batch_size=32,\n",
     "    shuffle=True\n",
     "    )\n",
     "\n",
-    "    classifier.train(input_fn=train_input_fn, steps=500)\n",
+    "    classifier.train(input_fn=train_input_fn, steps=300)\n",
     "\n",
     "    # Define the test inputs\n",
     "    test_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
@@ -109,12 +109,9 @@
    "source": [
     "from hops import experiment\n",
     "from hops import hdfs\n",
-    "\n",
-    "notebook = hdfs.project_path() + \"Jupyter/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb\"\n",
     "experiment.launch(minimal_mnist,\n",
     "                  name='mnist estimator', \n",
-    "                  description='A minimal mnist example with two hidden layers',\n",
-    "                  versioned_resources=[notebook])"
+    "                  description='A minimal mnist example with two hidden layers')"
    ]
   },
   {
