reduce checkpointing files

--- a/notebooks/featurestore/FeatureStoreQuickStart.ipynb
+++ b/notebooks/featurestore/FeatureStoreQuickStart.ipynb
@@ -622,7 +622,8 @@
     "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
     "                             write_graph=True, write_images=True)\n",
     "    callbacks = [tb_callback]\n",
-    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5'))\n",
+    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5'),\n",
+    "                    monitor='acc', verbose=0, save_best_only=True)\n",
     "    history = model.fit(dataset, epochs=NUM_EPOCHS, steps_per_epoch = 5, callbacks=callbacks)\n",
     "    return -float(history.history[\"loss\"][-1])"
    ]
