--- a/notebooks/featurestore/FeaturestoreTourPython.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourPython.ipynb
@@ -67,9 +67,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>12</td><td>application_1549128638243_0016</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1549128638243_0016/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1549128638243_0016_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "from hops import featurestore"
    ]
@@ -2990,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3014,7 +3042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3040,7 +3068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3078,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3103,7 +3131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3114,7 +3142,8 @@
     "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
     "                             write_graph=True, write_images=True)\n",
     "    callbacks = [tb_callback]\n",
-    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5'))\n",
+    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5',\n",
+    "                                                    monitor='acc', verbose=0, save_best_only=True))\n",
     "    history = model.fit(dataset, epochs=NUM_EPOCHS, steps_per_epoch = 5, callbacks=callbacks)\n",
     "    #Dump training history to HDFS so we can use it later on for analysis\n",
     "    results_path = hdfs.project_path() + \"Logs/featurestore_tour_model_results_loss.txt\"\n",
@@ -3140,16 +3169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0 || average metric: 0.010000000149011612, best metric: 0.020000000298023225, best parameter combination: ['num_neurons_per_layer=122', 'learning_rate=0.0014937343628250704']\n",
+      "Generation 0 || average metric: 0.0050000000745, best metric: 0.020000000298, best parameter combination: ['num_neurons_per_layer=74', 'learning_rate=0.00378018595967']\n",
       "\n",
-      "Generation 1 || average metric: 0.01500000022351742, best metric: 0.020000000298023225, best parameter combination: ['num_neurons_per_layer=122', 'learning_rate=0.0014937343628250704']\n",
+      "Generation 1 || average metric: 0.010000000149, best metric: 0.020000000298, best parameter combination: ['num_neurons_per_layer=74', 'learning_rate=0.00378018595967']\n",
       "\n",
       "Finished Experiment"
      ]
@@ -3193,14 +3222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'num_neurons_per_layer': '122', 'learning_rate': '0.0014937343628250704'}"
+      "{'num_neurons_per_layer': '118', 'learning_rate': '0.01'}"
      ]
     }
    ],
