--- a/notebooks/featurestore/FeatureStoreQuickStart.ipynb
+++ b/notebooks/featurestore/FeatureStoreQuickStart.ipynb
@@ -26,9 +26,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>13</td><td>application_1549128638243_0017</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1549128638243_0017/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1549128638243_0017_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -137,15 +165,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+--------+------------------+------------------+------------------+\n",
-      "|area_id|house_id|       house_worth|         house_age|        house_size|\n",
-      "+-------+--------+------------------+------------------+------------------+\n",
-      "|      1|       0|1235.8964498011055|15209.167149729032| 946.9330832081548|\n",
-      "|      1|       1| 6565.954063128252| 3062.089398466682| 910.6361253221028|\n",
-      "|      1|       2| 9654.127075151942|10926.498603456082|232.47327070548533|\n",
-      "|      1|       3| 480.8114656255752|1060.8558656520677|1122.5265979697153|\n",
-      "|      1|       4|10523.690743832467| 5680.374490371133|193.64875584942823|\n",
-      "+-------+--------+------------------+------------------+------------------+\n",
+      "+-------+------------------+--------+------------------+------------------+\n",
+      "|area_id|         house_age|house_id|        house_size|       house_worth|\n",
+      "+-------+------------------+--------+------------------+------------------+\n",
+      "|      1|2197.6538783413644|       0|1540.6164197194921| 936.4639471590823|\n",
+      "|      1| 4575.640957556092|       1|  291.299158164445| 3827.151581426811|\n",
+      "|      1|3056.2417991681514|       2|1051.5145743403905|22857.846837349654|\n",
+      "|      1| 12768.38793285203|       3| 944.4714646085961| 3590.890018337794|\n",
+      "|      1| 4722.828106705723|       4| 259.1621123268429|10525.711844055819|\n",
+      "+-------+------------------+--------+------------------+------------------+\n",
       "only showing top 5 rows"
      ]
     }
@@ -165,10 +193,10 @@
      "text": [
       "root\n",
       " |-- area_id: long (nullable = true)\n",
-      " |-- house_id: long (nullable = true)\n",
-      " |-- house_worth: double (nullable = true)\n",
       " |-- house_age: double (nullable = true)\n",
-      " |-- house_size: double (nullable = true)"
+      " |-- house_id: long (nullable = true)\n",
+      " |-- house_size: double (nullable = true)\n",
+      " |-- house_worth: double (nullable = true)"
      ]
     }
    ],
@@ -219,11 +247,11 @@
       "+-------+-----------------+-----------------+------------------+\n",
       "|area_id|house_purchase_id|number_of_bidders|   sold_for_amount|\n",
       "+-------+-----------------+-----------------+------------------+\n",
-      "|      1|                0|                3| 7307.603186604708|\n",
-      "|      1|                1|                4|132937.08224200772|\n",
-      "|      1|                2|                0|226947.69716229654|\n",
-      "|      1|                3|                2| 66354.03905931387|\n",
-      "|      1|                4|                5|28493.992997396883|\n",
+      "|      1|                0|                8|103136.86683870589|\n",
+      "|      1|                1|                4| 106496.0570260969|\n",
+      "|      1|                2|                5|27771.654964553803|\n",
+      "|      1|                3|                3| 195575.7653004581|\n",
+      "|      1|                4|               20| 62427.45592116985|\n",
       "+-------+-----------------+-----------------+------------------+\n",
       "only showing top 5 rows"
      ]
@@ -500,7 +528,7 @@
      "output_type": "stream",
      "text": [
       "Running sql: use demo_featurestore_admin000_featurestore\n",
-      "Running sql: SELECT avg_sold_for, avg_house_age, avg_house_size, avg_num_bidders, avg_house_worth FROM houses_sold_featuregroup_1 JOIN houses_for_sale_featuregroup_1 ON houses_sold_featuregroup_1.`area_id`=houses_for_sale_featuregroup_1.`area_id`"
+      "Running sql: SELECT avg_house_age, avg_house_size, avg_house_worth, avg_num_bidders, avg_sold_for FROM houses_for_sale_featuregroup_1 JOIN houses_sold_featuregroup_1 ON houses_for_sale_featuregroup_1.`area_id`=houses_sold_featuregroup_1.`area_id`"
      ]
     }
    ],
@@ -538,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,8 +650,8 @@
     "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
     "                             write_graph=True, write_images=True)\n",
     "    callbacks = [tb_callback]\n",
-    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5'),\n",
-    "                    monitor='acc', verbose=0, save_best_only=True)\n",
+    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5',\n",
+    "                    monitor='acc', verbose=0, save_best_only=True))\n",
     "    history = model.fit(dataset, epochs=NUM_EPOCHS, steps_per_epoch = 5, callbacks=callbacks)\n",
     "    return -float(history.history[\"loss\"][-1])"
    ]
@@ -637,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +674,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "'hdfs://10.0.2.15:8020/Projects/demo_featurestore_admin000/Experiments/application_1549128638243_0006/launcher/run.6'"
+      "u'hdfs://10.0.2.15:8020/Projects/demo_featurestore_admin000/Experiments/application_1549128638243_0017/launcher/run.2'"
      ]
     }
    ],
