[HOPSWORKS-912] Support image/avro datatypes in FS
- Add examples of how to store and use images in the feature store
- Update tour notebooks with examples of new training dataset datatypes (avro, orc, image)

--- a/notebooks/featurestore/FeaturestoreTourPython.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourPython.ipynb
@@ -81,7 +81,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>30</td><td>application_1549128638243_0035</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1549128638243_0035/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1549128638243_0035_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>21</td><td>application_1549990428861_0023</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1549990428861_0023/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1549990428861_0023_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2134,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2259,6 +2259,8 @@
     "- tsv (written with spark distributed)\n",
     "- parquet (written with spark distributed)\n",
     "- tfrecords (written with spark distributed)\n",
+    "- avro (written with spark distributed)\n",
+    "- orc (written with spark distributed)\n",
     "- hdf5 (written with single-machine, must fit into memory)\n",
     "- npy (written with single-machine, must fit into memory)"
    ]
@@ -2338,6 +2340,62 @@
     "    featurestore=featurestore.project_featurestore(),\n",
     "    data_format=\"parquet\",\n",
     "    training_dataset_version=featurestore.get_latest_training_dataset_version(\"team_position_prediction_parquet\") + 1,\n",
+    "    job_name=None,\n",
+    "    dependencies=[],\n",
+    "    descriptive_statistics=False,\n",
+    "    feature_correlation=False,\n",
+    "    feature_histograms=False,\n",
+    "    cluster_analysis=False,\n",
+    "    stat_columns=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save a Training Dataset in ORC format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "featurestore.create_training_dataset(\n",
+    "    features_df, \"team_position_prediction_orc\",\n",
+    "    description=\"a dataset with features for football teams, used for training a model to predict league-position\",\n",
+    "    featurestore=featurestore.project_featurestore(),\n",
+    "    data_format=\"orc\",\n",
+    "    training_dataset_version=featurestore.get_latest_training_dataset_version(\"team_position_prediction_orc\") + 1,\n",
+    "    job_name=None,\n",
+    "    dependencies=[],\n",
+    "    descriptive_statistics=False,\n",
+    "    feature_correlation=False,\n",
+    "    feature_histograms=False,\n",
+    "    cluster_analysis=False,\n",
+    "    stat_columns=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save a Training Dataset in avro format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "featurestore.create_training_dataset(\n",
+    "    features_df, \"team_position_prediction_avro\",\n",
+    "    description=\"a dataset with features for football teams, used for training a model to predict league-position\",\n",
+    "    featurestore=featurestore.project_featurestore(),\n",
+    "    data_format=\"avro\",\n",
+    "    training_dataset_version=featurestore.get_latest_training_dataset_version(\"team_position_prediction_avro\") + 1,\n",
     "    job_name=None,\n",
     "    dependencies=[],\n",
     "    descriptive_statistics=False,\n",
