--- a/notebooks/numpy/numpy-hdfs.ipynb
+++ b/notebooks/numpy/numpy-hdfs.ipynb
@@ -16,12 +16,12 @@
    "source": [
     "from hops import hdfs\n",
     "from hops import numpy\n",
-    "data = numpy.loadnp(\"Resources/C_test.npy\")\n",
+    "data = numpy.load(\"Resources/C_test.npy\")\n",
     "\n",
     "data.shape\n",
     "\n",
-    "numpy.savenp(\"Resources/project-relative-path.npy\", data)\n",
-    "numpy.savenp(hdfs.project_path() + \"/Resources/full-path.npy\", data)\n"
+    "numpy.save(\"Resources/project-relative-path.npy\", data)\n",
+    "numpy.save(hdfs.project_path() + \"/Resources/full-path.npy\", data)\n"
    ]
   }
  ],
